[project]

name = "xlink"
version = "1.0.0"
description = "App para la descarga de archivos"
authors = [
  {name = "KeimaSenpai", email = "KeimaSenpai@proton.me"}
]
dependencies = ["flet==0.24.1"]

[tool.flet]
org = "com.bytebloom" # --org
product = "XLink" # --product
company = "ByteBloom" # --company
copyright = "Copyright (C) 2024 by ByteBloom" # --copyright
build_number = 1 # --build-number

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.BACKGROUND_REFRESH" = true
"android.permission.IGNORE_BATTERY_OPTIMIZATIONS" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.MEDIA_LIBRARY" = true
"android.permission.STORAGE" = true

[tool.flet.ios]
team = "byte" # --team